[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Photo/brazilflag.png" type="Texture" id=2]
[ext_resource path="res://Assets/Photo/flag_US.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/tilesets/tiles_world.tres" type="TileSet" id=4]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
margin_bottom = 3.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -72.6001
margin_top = -76.6506
margin_right = 923.4
margin_bottom = 587.349
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 43, 0, 1, 44, 0, 2, 44, 0, 3, 44, 0, 4, 44, 0, 5, 44, 0, 6, 44, 0, 7, 44, 0, 8, 44, 0, 9, 44, 0, 10, 44, 0, 11, 44, 0, 12, 44, 0, 13, 44, 0, 14, 44, 0, 15, 44, 0, 16, 44, 0, 17, 44, 0, 18, 44, 0, 19, 44, 0, 20, 44, 0, 21, 44, 0, 22, 44, 0, 23, 44, 0, 24, 44, 0, 25, 44, 0, 26, 44, 0, 27, 44, 0, 28, 44, 0, 29, 44, 0, 30, 44, 0, 31, 44, 0, 32, 44, 0, 33, 44, 0, 34, 44, 0, 35, 44, 0, 36, 44, 0, 37, 44, 0, 38, 44, 0, 39, 44, 0, 40, 44, 0, 41, 44, 0, 42, 44, 0, 43, 44, 0, 44, 44, 0, 45, 44, 0, 46, 44, 0, 47, 44, 0, 48, 44, 0, 49, 45, 0, 65536, 46, 0, 65537, 31, 0, 65538, 31, 0, 65539, 31, 0, 65540, 31, 0, 65541, 31, 0, 65542, 31, 0, 65543, 31, 0, 65544, 31, 0, 65545, 31, 0, 65546, 31, 0, 65547, 31, 0, 65548, 31, 0, 65549, 31, 0, 65550, 31, 0, 65551, 31, 0, 65552, 31, 0, 65553, 31, 0, 65554, 31, 0, 65555, 31, 0, 65556, 31, 0, 65557, 31, 0, 65558, 31, 0, 65559, 31, 0, 65560, 31, 0, 65561, 31, 0, 65562, 31, 0, 65563, 31, 0, 65564, 31, 0, 65565, 31, 0, 65566, 31, 0, 65567, 31, 0, 65568, 31, 0, 65569, 31, 0, 65570, 31, 0, 65571, 31, 0, 65572, 31, 0, 65573, 31, 0, 65574, 31, 0, 65575, 31, 0, 65576, 31, 0, 65577, 31, 0, 65578, 31, 0, 65579, 31, 0, 65580, 31, 0, 65581, 31, 0, 65582, 31, 0, 65583, 31, 0, 65584, 31, 0, 65585, 47, 0, 131072, 46, 0, 131073, 31, 0, 131074, 43, 0, 131075, 44, 0, 131076, 44, 0, 131077, 44, 0, 131078, 44, 0, 131079, 44, 0, 131080, 45, 0, 131081, 31, 0, 131082, 31, 0, 131083, 31, 0, 131084, 31, 0, 131085, 31, 0, 131086, 31, 0, 131087, 31, 0, 131088, 31, 0, 131089, 31, 0, 131090, 31, 0, 131091, 31, 0, 131092, 43, 0, 131093, 44, 0, 131094, 44, 0, 131095, 44, 0, 131096, 44, 0, 131097, 44, 0, 131098, 44, 0, 131099, 44, 0, 131100, 44, 0, 131101, 45, 0, 131102, 31, 0, 131103, 31, 0, 131104, 31, 0, 131105, 31, 0, 131106, 31, 0, 131107, 31, 0, 131108, 31, 0, 131109, 31, 0, 131110, 31, 0, 131111, 31, 0, 131112, 31, 0, 131113, 31, 0, 131114, 31, 0, 131115, 31, 0, 131116, 31, 0, 131117, 31, 0, 131118, 31, 0, 131119, 31, 0, 131120, 31, 0, 131121, 47, 0, 196608, 46, 0, 196609, 31, 0, 196610, 46, 0, 196611, 30, 0, 196612, 30, 0, 196613, 30, 0, 196614, 30, 0, 196615, 30, 0, 196616, 47, 0, 196617, 31, 0, 196618, 31, 0, 196619, 31, 0, 196620, 31, 0, 196621, 31, 0, 196622, 31, 0, 196623, 31, 0, 196624, 31, 0, 196625, 31, 0, 196626, 31, 0, 196627, 31, 0, 196628, 46, 0, 196629, 30, 0, 196630, 30, 0, 196631, 30, 0, 196632, 30, 0, 196633, 30, 0, 196634, 30, 0, 196635, 30, 0, 196636, 30, 0, 196637, 47, 0, 196638, 31, 0, 196639, 31, 0, 196640, 31, 0, 196641, 31, 0, 196642, 31, 0, 196643, 31, 0, 196644, 31, 0, 196645, 31, 0, 196646, 31, 0, 196647, 31, 0, 196648, 31, 0, 196649, 31, 0, 196650, 31, 0, 196651, 31, 0, 196652, 31, 0, 196653, 31, 0, 196654, 31, 0, 196655, 31, 0, 196656, 31, 0, 196657, 47, 0, 262144, 46, 0, 262145, 31, 0, 262146, 46, 0, 262147, 30, 0, 262148, 30, 0, 262149, 30, 0, 262150, 30, 0, 262151, 30, 0, 262152, 47, 0, 262153, 31, 0, 262154, 31, 0, 262155, 31, 0, 262156, 31, 0, 262157, 31, 0, 262158, 31, 0, 262159, 31, 0, 262160, 31, 0, 262161, 31, 0, 262162, 31, 0, 262163, 31, 0, 262164, 48, 0, 262165, 49, 0, 262166, 49, 0, 262167, 49, 0, 262168, 49, 0, 262169, 49, 0, 262170, 49, 0, 262171, 49, 0, 262172, 49, 0, 262173, 50, 0, 262174, 31, 0, 262175, 31, 0, 262176, 31, 0, 262177, 31, 0, 262178, 31, 0, 262179, 31, 0, 262180, 31, 0, 262181, 31, 0, 262182, 31, 0, 262183, 31, 0, 262184, 31, 0, 262185, 31, 0, 262186, 31, 0, 262187, 31, 0, 262188, 31, 0, 262189, 31, 0, 262190, 31, 0, 262191, 31, 0, 262192, 31, 0, 262193, 47, 0, 327680, 46, 0, 327681, 31, 0, 327682, 48, 0, 327683, 49, 0, 327684, 49, 0, 327685, 49, 0, 327686, 49, 0, 327687, 49, 0, 327688, 50, 0, 327689, 31, 0, 327690, 31, 0, 327691, 31, 0, 327692, 31, 0, 327693, 31, 0, 327694, 31, 0, 327695, 31, 0, 327696, 31, 0, 327697, 31, 0, 327698, 31, 0, 327699, 31, 0, 327700, 31, 0, 327701, 31, 0, 327702, 31, 0, 327703, 31, 0, 327704, 31, 0, 327705, 31, 0, 327706, 31, 0, 327707, 31, 0, 327708, 31, 0, 327709, 31, 0, 327710, 31, 0, 327711, 31, 0, 327712, 31, 0, 327713, 31, 0, 327714, 31, 0, 327715, 31, 0, 327716, 31, 0, 327717, 31, 0, 327718, 31, 0, 327719, 31, 0, 327720, 31, 0, 327721, 31, 0, 327722, 31, 0, 327723, 31, 0, 327724, 31, 0, 327725, 31, 0, 327726, 31, 0, 327727, 31, 0, 327728, 31, 0, 327729, 47, 0, 393216, 46, 0, 393217, 31, 0, 393218, 31, 0, 393219, 31, 0, 393220, 31, 0, 393221, 31, 0, 393222, 31, 0, 393223, 31, 0, 393224, 31, 0, 393225, 31, 0, 393226, 31, 0, 393227, 31, 0, 393228, 31, 0, 393229, 31, 0, 393230, 31, 0, 393231, 31, 0, 393232, 31, 0, 393233, 31, 0, 393234, 31, 0, 393235, 31, 0, 393236, 31, 0, 393237, 31, 0, 393238, 31, 0, 393239, 31, 0, 393240, 31, 0, 393241, 31, 0, 393242, 31, 0, 393243, 31, 0, 393244, 31, 0, 393245, 31, 0, 393246, 31, 0, 393247, 31, 0, 393248, 31, 0, 393249, 31, 0, 393250, 31, 0, 393251, 31, 0, 393252, 31, 0, 393253, 31, 0, 393254, 31, 0, 393255, 31, 0, 393256, 31, 0, 393257, 31, 0, 393258, 31, 0, 393259, 31, 0, 393260, 31, 0, 393261, 31, 0, 393262, 31, 0, 393263, 31, 0, 393264, 31, 0, 393265, 47, 0, 458752, 46, 0, 458753, 31, 0, 458754, 31, 0, 458755, 31, 0, 458756, 31, 0, 458757, 31, 0, 458758, 31, 0, 458759, 31, 0, 458760, 31, 0, 458761, 31, 0, 458762, 31, 0, 458763, 31, 0, 458764, 31, 0, 458765, 31, 0, 458766, 31, 0, 458767, 31, 0, 458768, 31, 0, 458769, 31, 0, 458770, 31, 0, 458771, 31, 0, 458772, 31, 0, 458773, 31, 0, 458774, 31, 0, 458775, 31, 0, 458776, 31, 0, 458777, 31, 0, 458778, 31, 0, 458779, 31, 0, 458780, 31, 0, 458781, 31, 0, 458782, 31, 0, 458783, 31, 0, 458784, 31, 0, 458785, 31, 0, 458786, 31, 0, 458787, 31, 0, 458788, 31, 0, 458789, 31, 0, 458790, 31, 0, 458791, 31, 0, 458792, 31, 0, 458793, 31, 0, 458794, 31, 0, 458795, 31, 0, 458796, 31, 0, 458797, 31, 0, 458798, 31, 0, 458799, 31, 0, 458800, 31, 0, 458801, 47, 0, 524288, 46, 0, 524289, 31, 0, 524290, 31, 0, 524291, 31, 0, 524292, 31, 0, 524293, 31, 0, 524294, 31, 0, 524295, 31, 0, 524296, 31, 0, 524297, 31, 0, 524298, 31, 0, 524299, 31, 0, 524300, 31, 0, 524301, 31, 0, 524302, 31, 0, 524303, 31, 0, 524304, 31, 0, 524305, 31, 0, 524306, 31, 0, 524307, 43, 0, 524308, 44, 0, 524309, 44, 0, 524310, 44, 0, 524311, 44, 0, 524312, 44, 0, 524313, 44, 0, 524314, 44, 0, 524315, 44, 0, 524316, 44, 0, 524317, 44, 0, 524318, 45, 0, 524319, 31, 0, 524320, 31, 0, 524321, 31, 0, 524322, 31, 0, 524323, 31, 0, 524324, 31, 0, 524325, 31, 0, 524326, 31, 0, 524327, 31, 0, 524328, 31, 0, 524329, 31, 0, 524330, 31, 0, 524331, 31, 0, 524332, 31, 0, 524333, 31, 0, 524334, 31, 0, 524335, 31, 0, 524336, 31, 0, 524337, 47, 0, 589824, 46, 0, 589825, 31, 0, 589826, 31, 0, 589827, 31, 0, 589828, 31, 0, 589829, 31, 0, 589830, 31, 0, 589831, 31, 0, 589832, 31, 0, 589833, 31, 0, 589834, 31, 0, 589835, 31, 0, 589836, 31, 0, 589837, 31, 0, 589838, 31, 0, 589839, 31, 0, 589840, 31, 0, 589841, 31, 0, 589842, 31, 0, 589843, 46, 0, 589844, 30, 0, 589845, 30, 0, 589846, 30, 0, 589847, 30, 0, 589848, 30, 0, 589849, 30, 0, 589850, 30, 0, 589851, 30, 0, 589852, 30, 0, 589853, 30, 0, 589854, 47, 0, 589855, 31, 0, 589856, 31, 0, 589857, 31, 0, 589858, 31, 0, 589859, 31, 0, 589860, 31, 0, 589861, 31, 0, 589862, 31, 0, 589863, 31, 0, 589864, 31, 0, 589865, 31, 0, 589866, 31, 0, 589867, 31, 0, 589868, 31, 0, 589869, 31, 0, 589870, 31, 0, 589871, 31, 0, 589872, 31, 0, 589873, 47, 0, 655360, 46, 0, 655361, 31, 0, 655362, 31, 0, 655363, 31, 0, 655364, 31, 0, 655365, 31, 0, 655366, 31, 0, 655367, 31, 0, 655368, 31, 0, 655369, 31, 0, 655370, 31, 0, 655371, 31, 0, 655372, 31, 0, 655373, 31, 0, 655374, 31, 0, 655375, 31, 0, 655376, 31, 0, 655377, 31, 0, 655378, 31, 0, 655379, 46, 0, 655380, 30, 0, 655381, 30, 0, 655382, 30, 0, 655383, 30, 0, 655384, 30, 0, 655385, 30, 0, 655386, 30, 0, 655387, 30, 0, 655388, 30, 0, 655389, 30, 0, 655390, 47, 0, 655391, 31, 0, 655392, 31, 0, 655393, 31, 0, 655394, 31, 0, 655395, 31, 0, 655396, 31, 0, 655397, 31, 0, 655398, 31, 0, 655399, 31, 0, 655400, 31, 0, 655401, 31, 0, 655402, 31, 0, 655403, 31, 0, 655404, 31, 0, 655405, 31, 0, 655406, 31, 0, 655407, 31, 0, 655408, 31, 0, 655409, 47, 0, 720896, 46, 0, 720897, 31, 0, 720898, 31, 0, 720899, 31, 0, 720900, 31, 0, 720901, 31, 0, 720902, 31, 0, 720903, 31, 0, 720904, 31, 0, 720905, 31, 0, 720906, 31, 0, 720907, 31, 0, 720908, 31, 0, 720909, 31, 0, 720910, 31, 0, 720911, 31, 0, 720912, 31, 0, 720913, 31, 0, 720914, 31, 0, 720915, 48, 0, 720916, 49, 0, 720917, 49, 0, 720918, 49, 0, 720919, 49, 0, 720920, 49, 0, 720921, 49, 0, 720922, 49, 0, 720923, 49, 0, 720924, 49, 0, 720925, 49, 0, 720926, 50, 0, 720927, 31, 0, 720928, 31, 0, 720929, 31, 0, 720930, 31, 0, 720931, 31, 0, 720932, 31, 0, 720933, 31, 0, 720934, 31, 0, 720935, 31, 0, 720936, 31, 0, 720937, 31, 0, 720938, 31, 0, 720939, 31, 0, 720940, 31, 0, 720941, 31, 0, 720942, 31, 0, 720943, 31, 0, 720944, 31, 0, 720945, 47, 0, 786432, 46, 0, 786433, 31, 0, 786434, 31, 0, 786435, 31, 0, 786436, 31, 0, 786437, 31, 0, 786438, 31, 0, 786439, 31, 0, 786440, 31, 0, 786441, 31, 0, 786442, 31, 0, 786443, 31, 0, 786444, 31, 0, 786445, 31, 0, 786446, 31, 0, 786447, 31, 0, 786448, 31, 0, 786449, 31, 0, 786450, 31, 0, 786451, 31, 0, 786452, 31, 0, 786453, 31, 0, 786454, 31, 0, 786455, 31, 0, 786456, 31, 0, 786457, 31, 0, 786458, 31, 0, 786459, 31, 0, 786460, 31, 0, 786461, 31, 0, 786462, 31, 0, 786463, 31, 0, 786464, 31, 0, 786465, 31, 0, 786466, 31, 0, 786467, 31, 0, 786468, 31, 0, 786469, 31, 0, 786470, 31, 0, 786471, 31, 0, 786472, 31, 0, 786473, 31, 0, 786474, 31, 0, 786475, 31, 0, 786476, 31, 0, 786477, 31, 0, 786478, 31, 0, 786479, 31, 0, 786480, 31, 0, 786481, 47, 0, 851968, 46, 0, 851969, 31, 0, 851970, 31, 0, 851971, 31, 0, 851972, 31, 0, 851973, 31, 0, 851974, 31, 0, 851975, 31, 0, 851976, 31, 0, 851977, 31, 0, 851978, 31, 0, 851979, 31, 0, 851980, 31, 0, 851981, 31, 0, 851982, 31, 0, 851983, 31, 0, 851984, 31, 0, 851985, 31, 0, 851986, 31, 0, 851987, 31, 0, 851988, 31, 0, 851989, 31, 0, 851990, 31, 0, 851991, 31, 0, 851992, 31, 0, 851993, 31, 0, 851994, 31, 0, 851995, 31, 0, 851996, 31, 0, 851997, 31, 0, 851998, 31, 0, 851999, 31, 0, 852000, 31, 0, 852001, 31, 0, 852002, 31, 0, 852003, 31, 0, 852004, 31, 0, 852005, 31, 0, 852006, 31, 0, 852007, 31, 0, 852008, 31, 0, 852009, 31, 0, 852010, 31, 0, 852011, 31, 0, 852012, 31, 0, 852013, 31, 0, 852014, 31, 0, 852015, 31, 0, 852016, 31, 0, 852017, 47, 0, 917504, 46, 0, 917505, 31, 0, 917506, 31, 0, 917507, 31, 0, 917508, 31, 0, 917509, 31, 0, 917510, 31, 0, 917511, 31, 0, 917512, 31, 0, 917513, 31, 0, 917514, 31, 0, 917515, 31, 0, 917516, 31, 0, 917517, 31, 0, 917518, 31, 0, 917519, 31, 0, 917520, 31, 0, 917521, 31, 0, 917522, 31, 0, 917523, 43, 0, 917524, 44, 0, 917525, 44, 0, 917526, 44, 0, 917527, 44, 0, 917528, 44, 0, 917529, 44, 0, 917530, 44, 0, 917531, 44, 0, 917532, 44, 0, 917533, 44, 0, 917534, 45, 0, 917535, 31, 0, 917536, 31, 0, 917537, 31, 0, 917538, 31, 0, 917539, 31, 0, 917540, 31, 0, 917541, 31, 0, 917542, 31, 0, 917543, 31, 0, 917544, 31, 0, 917545, 31, 0, 917546, 31, 0, 917547, 31, 0, 917548, 31, 0, 917549, 31, 0, 917550, 31, 0, 917551, 31, 0, 917552, 31, 0, 917553, 47, 0, 983040, 46, 0, 983041, 31, 0, 983042, 31, 0, 983043, 31, 0, 983044, 31, 0, 983045, 31, 0, 983046, 31, 0, 983047, 31, 0, 983048, 31, 0, 983049, 31, 0, 983050, 31, 0, 983051, 31, 0, 983052, 31, 0, 983053, 31, 0, 983054, 31, 0, 983055, 31, 0, 983056, 31, 0, 983057, 31, 0, 983058, 31, 0, 983059, 46, 0, 983060, 30, 0, 983061, 30, 0, 983062, 30, 0, 983063, 30, 0, 983064, 30, 0, 983065, 30, 0, 983066, 30, 0, 983067, 30, 0, 983068, 30, 0, 983069, 30, 0, 983070, 47, 0, 983071, 31, 0, 983072, 31, 0, 983073, 31, 0, 983074, 31, 0, 983075, 31, 0, 983076, 31, 0, 983077, 31, 0, 983078, 31, 0, 983079, 31, 0, 983080, 31, 0, 983081, 31, 0, 983082, 31, 0, 983083, 31, 0, 983084, 31, 0, 983085, 31, 0, 983086, 31, 0, 983087, 31, 0, 983088, 31, 0, 983089, 47, 0, 1048576, 46, 0, 1048577, 31, 0, 1048578, 31, 0, 1048579, 31, 0, 1048580, 31, 0, 1048581, 31, 0, 1048582, 31, 0, 1048583, 31, 0, 1048584, 31, 0, 1048585, 31, 0, 1048586, 31, 0, 1048587, 31, 0, 1048588, 31, 0, 1048589, 31, 0, 1048590, 31, 0, 1048591, 31, 0, 1048592, 31, 0, 1048593, 31, 0, 1048594, 31, 0, 1048595, 46, 0, 1048596, 30, 0, 1048597, 30, 0, 1048598, 30, 0, 1048599, 30, 0, 1048600, 30, 0, 1048601, 30, 0, 1048602, 30, 0, 1048603, 30, 0, 1048604, 30, 0, 1048605, 30, 0, 1048606, 47, 0, 1048607, 31, 0, 1048608, 31, 0, 1048609, 31, 0, 1048610, 31, 0, 1048611, 31, 0, 1048612, 31, 0, 1048613, 31, 0, 1048614, 31, 0, 1048615, 31, 0, 1048616, 31, 0, 1048617, 31, 0, 1048618, 31, 0, 1048619, 31, 0, 1048620, 31, 0, 1048621, 31, 0, 1048622, 31, 0, 1048623, 31, 0, 1048624, 31, 0, 1048625, 47, 0, 1114112, 46, 0, 1114113, 31, 0, 1114114, 31, 0, 1114115, 31, 0, 1114116, 31, 0, 1114117, 31, 0, 1114118, 31, 0, 1114119, 31, 0, 1114120, 31, 0, 1114121, 31, 0, 1114122, 31, 0, 1114123, 31, 0, 1114124, 31, 0, 1114125, 31, 0, 1114126, 31, 0, 1114127, 31, 0, 1114128, 31, 0, 1114129, 31, 0, 1114130, 31, 0, 1114131, 48, 0, 1114132, 49, 0, 1114133, 49, 0, 1114134, 49, 0, 1114135, 49, 0, 1114136, 49, 0, 1114137, 49, 0, 1114138, 49, 0, 1114139, 49, 0, 1114140, 49, 0, 1114141, 49, 0, 1114142, 50, 0, 1114143, 31, 0, 1114144, 31, 0, 1114145, 31, 0, 1114146, 31, 0, 1114147, 31, 0, 1114148, 31, 0, 1114149, 31, 0, 1114150, 31, 0, 1114151, 31, 0, 1114152, 31, 0, 1114153, 31, 0, 1114154, 31, 0, 1114155, 31, 0, 1114156, 31, 0, 1114157, 31, 0, 1114158, 31, 0, 1114159, 31, 0, 1114160, 31, 0, 1114161, 47, 0, 1179648, 46, 0, 1179649, 31, 0, 1179650, 31, 0, 1179651, 31, 0, 1179652, 31, 0, 1179653, 31, 0, 1179654, 31, 0, 1179655, 31, 0, 1179656, 31, 0, 1179657, 31, 0, 1179658, 31, 0, 1179659, 31, 0, 1179660, 31, 0, 1179661, 31, 0, 1179662, 31, 0, 1179663, 31, 0, 1179664, 31, 0, 1179665, 31, 0, 1179666, 31, 0, 1179667, 31, 0, 1179668, 31, 0, 1179669, 31, 0, 1179670, 31, 0, 1179671, 31, 0, 1179672, 31, 0, 1179673, 31, 0, 1179674, 31, 0, 1179675, 31, 0, 1179676, 31, 0, 1179677, 31, 0, 1179678, 31, 0, 1179679, 31, 0, 1179680, 31, 0, 1179681, 31, 0, 1179682, 31, 0, 1179683, 31, 0, 1179684, 31, 0, 1179685, 31, 0, 1179686, 31, 0, 1179687, 31, 0, 1179688, 31, 0, 1179689, 31, 0, 1179690, 31, 0, 1179691, 31, 0, 1179692, 31, 0, 1179693, 31, 0, 1179694, 31, 0, 1179695, 31, 0, 1179696, 31, 0, 1179697, 47, 0, 1245184, 46, 0, 1245185, 31, 0, 1245186, 31, 0, 1245187, 31, 0, 1245188, 31, 0, 1245189, 31, 0, 1245190, 31, 0, 1245191, 31, 0, 1245192, 31, 0, 1245193, 31, 0, 1245194, 31, 0, 1245195, 31, 0, 1245196, 31, 0, 1245197, 31, 0, 1245198, 31, 0, 1245199, 31, 0, 1245200, 31, 0, 1245201, 31, 0, 1245202, 31, 0, 1245203, 31, 0, 1245204, 31, 0, 1245205, 31, 0, 1245206, 31, 0, 1245207, 31, 0, 1245208, 31, 0, 1245209, 31, 0, 1245210, 31, 0, 1245211, 31, 0, 1245212, 31, 0, 1245213, 31, 0, 1245214, 31, 0, 1245215, 31, 0, 1245216, 31, 0, 1245217, 31, 0, 1245218, 31, 0, 1245219, 31, 0, 1245220, 31, 0, 1245221, 31, 0, 1245222, 31, 0, 1245223, 31, 0, 1245224, 31, 0, 1245225, 31, 0, 1245226, 31, 0, 1245227, 31, 0, 1245228, 31, 0, 1245229, 31, 0, 1245230, 31, 0, 1245231, 31, 0, 1245232, 31, 0, 1245233, 47, 0, 1310720, 46, 0, 1310721, 31, 0, 1310722, 31, 0, 1310723, 31, 0, 1310724, 31, 0, 1310725, 31, 0, 1310726, 31, 0, 1310727, 31, 0, 1310728, 31, 0, 1310729, 31, 0, 1310730, 31, 0, 1310731, 31, 0, 1310732, 31, 0, 1310733, 31, 0, 1310734, 31, 0, 1310735, 31, 0, 1310736, 31, 0, 1310737, 31, 0, 1310738, 31, 0, 1310739, 43, 0, 1310740, 44, 0, 1310741, 44, 0, 1310742, 44, 0, 1310743, 44, 0, 1310744, 44, 0, 1310745, 44, 0, 1310746, 44, 0, 1310747, 44, 0, 1310748, 44, 0, 1310749, 44, 0, 1310750, 45, 0, 1310751, 31, 0, 1310752, 31, 0, 1310753, 31, 0, 1310754, 31, 0, 1310755, 31, 0, 1310756, 31, 0, 1310757, 31, 0, 1310758, 31, 0, 1310759, 31, 0, 1310760, 31, 0, 1310761, 31, 0, 1310762, 31, 0, 1310763, 31, 0, 1310764, 31, 0, 1310765, 31, 0, 1310766, 31, 0, 1310767, 31, 0, 1310768, 31, 0, 1310769, 47, 0, 1376256, 46, 0, 1376257, 31, 0, 1376258, 31, 0, 1376259, 31, 0, 1376260, 31, 0, 1376261, 31, 0, 1376262, 31, 0, 1376263, 31, 0, 1376264, 31, 0, 1376265, 31, 0, 1376266, 31, 0, 1376267, 31, 0, 1376268, 31, 0, 1376269, 31, 0, 1376270, 31, 0, 1376271, 31, 0, 1376272, 31, 0, 1376273, 31, 0, 1376274, 31, 0, 1376275, 46, 0, 1376276, 30, 0, 1376277, 30, 0, 1376278, 30, 0, 1376279, 30, 0, 1376280, 30, 0, 1376281, 30, 0, 1376282, 30, 0, 1376283, 30, 0, 1376284, 30, 0, 1376285, 30, 0, 1376286, 47, 0, 1376287, 31, 0, 1376288, 31, 0, 1376289, 31, 0, 1376290, 31, 0, 1376291, 31, 0, 1376292, 31, 0, 1376293, 31, 0, 1376294, 31, 0, 1376295, 31, 0, 1376296, 31, 0, 1376297, 31, 0, 1376298, 31, 0, 1376299, 31, 0, 1376300, 31, 0, 1376301, 31, 0, 1376302, 31, 0, 1376303, 31, 0, 1376304, 31, 0, 1376305, 47, 0, 1441792, 46, 0, 1441793, 31, 0, 1441794, 31, 0, 1441795, 31, 0, 1441796, 31, 0, 1441797, 31, 0, 1441798, 31, 0, 1441799, 31, 0, 1441800, 31, 0, 1441801, 31, 0, 1441802, 31, 0, 1441803, 31, 0, 1441804, 31, 0, 1441805, 31, 0, 1441806, 31, 0, 1441807, 31, 0, 1441808, 31, 0, 1441809, 31, 0, 1441810, 31, 0, 1441811, 46, 0, 1441812, 49, 0, 1441813, 49, 0, 1441814, 49, 0, 1441815, 49, 0, 1441816, 49, 0, 1441817, 49, 0, 1441818, 49, 0, 1441819, 49, 0, 1441820, 49, 0, 1441821, 49, 0, 1441822, 47, 0, 1441823, 31, 0, 1441824, 31, 0, 1441825, 31, 0, 1441826, 31, 0, 1441827, 31, 0, 1441828, 31, 0, 1441829, 31, 0, 1441830, 31, 0, 1441831, 31, 0, 1441832, 31, 0, 1441833, 31, 0, 1441834, 31, 0, 1441835, 31, 0, 1441836, 31, 0, 1441837, 31, 0, 1441838, 31, 0, 1441839, 31, 0, 1441840, 31, 0, 1441841, 47, 0, 1507328, 46, 0, 1507329, 31, 0, 1507330, 31, 0, 1507331, 31, 0, 1507332, 31, 0, 1507333, 31, 0, 1507334, 31, 0, 1507335, 31, 0, 1507336, 31, 0, 1507337, 31, 0, 1507338, 31, 0, 1507339, 31, 0, 1507340, 31, 0, 1507341, 31, 0, 1507342, 31, 0, 1507343, 31, 0, 1507344, 31, 0, 1507345, 31, 0, 1507346, 31, 0, 1507347, 46, 0, 1507352, 47, 0, 1507353, 46, 0, 1507358, 47, 0, 1507359, 31, 0, 1507360, 31, 0, 1507361, 31, 0, 1507362, 31, 0, 1507363, 31, 0, 1507364, 31, 0, 1507365, 31, 0, 1507366, 31, 0, 1507367, 31, 0, 1507368, 31, 0, 1507369, 31, 0, 1507370, 31, 0, 1507371, 31, 0, 1507372, 31, 0, 1507373, 31, 0, 1507374, 31, 0, 1507375, 31, 0, 1507376, 31, 0, 1507377, 47, 0, 1572864, 46, 0, 1572865, 31, 0, 1572866, 31, 0, 1572867, 31, 0, 1572868, 31, 0, 1572869, 31, 0, 1572870, 31, 0, 1572871, 31, 0, 1572872, 31, 0, 1572873, 31, 0, 1572874, 31, 0, 1572875, 31, 0, 1572876, 31, 0, 1572877, 31, 0, 1572878, 31, 0, 1572879, 31, 0, 1572880, 31, 0, 1572881, 31, 0, 1572882, 31, 0, 1572883, 46, 0, 1572884, 31, 0, 1572885, 31, 0, 1572886, 31, 0, 1572887, 31, 0, 1572888, 47, 0, 1572889, 46, 0, 1572890, 31, 0, 1572891, 31, 0, 1572892, 31, 0, 1572893, 31, 0, 1572894, 47, 0, 1572895, 31, 0, 1572896, 31, 0, 1572897, 31, 0, 1572898, 31, 0, 1572899, 31, 0, 1572900, 31, 0, 1572901, 31, 0, 1572902, 31, 0, 1572903, 31, 0, 1572904, 31, 0, 1572905, 31, 0, 1572906, 31, 0, 1572907, 31, 0, 1572908, 31, 0, 1572909, 31, 0, 1572910, 31, 0, 1572911, 31, 0, 1572912, 31, 0, 1572913, 47, 0, 1638400, 46, 0, 1638401, 31, 0, 1638402, 31, 0, 1638403, 31, 0, 1638404, 31, 0, 1638405, 31, 0, 1638406, 31, 0, 1638407, 31, 0, 1638408, 31, 0, 1638409, 31, 0, 1638410, 31, 0, 1638411, 31, 0, 1638412, 31, 0, 1638413, 31, 0, 1638414, 31, 0, 1638415, 31, 0, 1638416, 31, 0, 1638417, 31, 0, 1638418, 31, 0, 1638419, 46, 0, 1638420, 31, 0, 1638421, 31, 0, 1638422, 31, 0, 1638423, 31, 0, 1638424, 47, 0, 1638425, 46, 0, 1638426, 31, 0, 1638427, 31, 0, 1638428, 31, 0, 1638429, 31, 0, 1638430, 47, 0, 1638431, 31, 0, 1638432, 31, 0, 1638433, 31, 0, 1638434, 31, 0, 1638435, 31, 0, 1638436, 31, 0, 1638437, 31, 0, 1638438, 31, 0, 1638439, 31, 0, 1638440, 31, 0, 1638441, 31, 0, 1638442, 31, 0, 1638443, 31, 0, 1638444, 31, 0, 1638445, 31, 0, 1638446, 31, 0, 1638447, 31, 0, 1638448, 31, 0, 1638449, 47, 0, 1703936, 46, 0, 1703937, 31, 0, 1703938, 31, 0, 1703939, 31, 0, 1703940, 31, 0, 1703941, 31, 0, 1703942, 31, 0, 1703943, 31, 0, 1703944, 31, 0, 1703945, 31, 0, 1703946, 31, 0, 1703947, 31, 0, 1703948, 31, 0, 1703949, 31, 0, 1703950, 31, 0, 1703951, 31, 0, 1703952, 31, 0, 1703953, 31, 0, 1703954, 31, 0, 1703955, 48, 0, 1703956, 49, 0, 1703957, 49, 0, 1703958, 49, 0, 1703959, 49, 0, 1703960, 49, 0, 1703961, 49, 0, 1703962, 49, 0, 1703963, 49, 0, 1703964, 49, 0, 1703965, 49, 0, 1703966, 50, 0, 1703967, 31, 0, 1703968, 31, 0, 1703969, 31, 0, 1703970, 31, 0, 1703971, 31, 0, 1703972, 31, 0, 1703973, 31, 0, 1703974, 31, 0, 1703975, 31, 0, 1703976, 31, 0, 1703977, 31, 0, 1703978, 31, 0, 1703979, 31, 0, 1703980, 31, 0, 1703981, 31, 0, 1703982, 31, 0, 1703983, 31, 0, 1703984, 31, 0, 1703985, 47, 0, 1769472, 46, 0, 1769473, 31, 0, 1769474, 31, 0, 1769475, 31, 0, 1769476, 31, 0, 1769477, 31, 0, 1769478, 31, 0, 1769479, 31, 0, 1769480, 31, 0, 1769481, 31, 0, 1769482, 31, 0, 1769483, 31, 0, 1769484, 31, 0, 1769485, 31, 0, 1769486, 31, 0, 1769487, 31, 0, 1769488, 31, 0, 1769489, 31, 0, 1769490, 31, 0, 1769491, 31, 0, 1769492, 31, 0, 1769493, 31, 0, 1769494, 31, 0, 1769495, 31, 0, 1769496, 31, 0, 1769497, 31, 0, 1769498, 31, 0, 1769499, 31, 0, 1769500, 31, 0, 1769501, 31, 0, 1769502, 31, 0, 1769503, 31, 0, 1769504, 31, 0, 1769505, 31, 0, 1769506, 31, 0, 1769507, 31, 0, 1769508, 31, 0, 1769509, 31, 0, 1769510, 31, 0, 1769511, 31, 0, 1769512, 31, 0, 1769513, 31, 0, 1769514, 31, 0, 1769515, 31, 0, 1769516, 31, 0, 1769517, 31, 0, 1769518, 31, 0, 1769519, 31, 0, 1769520, 31, 0, 1769521, 47, 0, 1835008, 46, 0, 1835009, 31, 0, 1835010, 31, 0, 1835011, 31, 0, 1835012, 31, 0, 1835013, 31, 0, 1835014, 31, 0, 1835015, 31, 0, 1835016, 31, 0, 1835017, 31, 0, 1835018, 31, 0, 1835019, 31, 0, 1835020, 31, 0, 1835021, 31, 0, 1835022, 31, 0, 1835023, 31, 0, 1835024, 31, 0, 1835025, 31, 0, 1835026, 31, 0, 1835027, 31, 0, 1835028, 31, 0, 1835029, 31, 0, 1835030, 31, 0, 1835031, 31, 0, 1835032, 31, 0, 1835033, 31, 0, 1835034, 31, 0, 1835035, 31, 0, 1835036, 31, 0, 1835037, 31, 0, 1835038, 31, 0, 1835039, 31, 0, 1835040, 31, 0, 1835041, 31, 0, 1835042, 31, 0, 1835043, 31, 0, 1835044, 31, 0, 1835045, 31, 0, 1835046, 31, 0, 1835047, 31, 0, 1835048, 31, 0, 1835049, 31, 0, 1835050, 31, 0, 1835051, 31, 0, 1835052, 31, 0, 1835053, 31, 0, 1835054, 31, 0, 1835055, 31, 0, 1835056, 31, 0, 1835057, 47, 0, 1900544, 48, 0, 1900545, 49, 0, 1900546, 49, 0, 1900547, 49, 0, 1900548, 49, 0, 1900549, 49, 0, 1900550, 49, 0, 1900551, 49, 0, 1900552, 49, 0, 1900553, 49, 0, 1900554, 49, 0, 1900555, 49, 0, 1900556, 49, 0, 1900557, 49, 0, 1900558, 49, 0, 1900559, 49, 0, 1900560, 49, 0, 1900561, 49, 0, 1900562, 49, 0, 1900563, 49, 0, 1900564, 49, 0, 1900565, 49, 0, 1900566, 49, 0, 1900567, 49, 0, 1900568, 49, 0, 1900569, 49, 0, 1900570, 49, 0, 1900571, 49, 0, 1900572, 49, 0, 1900573, 49, 0, 1900574, 49, 0, 1900575, 49, 0, 1900576, 49, 0, 1900577, 49, 0, 1900578, 49, 0, 1900579, 49, 0, 1900580, 49, 0, 1900581, 49, 0, 1900582, 49, 0, 1900583, 49, 0, 1900584, 49, 0, 1900585, 49, 0, 1900586, 49, 0, 1900587, 49, 0, 1900588, 49, 0, 1900589, 49, 0, 1900590, 49, 0, 1900591, 49, 0, 1900592, 49, 0, 1900593, 50, 0 )

[node name="BackButton" type="Button" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 128.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0.929412, 0.054902, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.243137, 0.964706, 0.0156863, 1 )
text = "btn_back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SupportButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 144.0
margin_right = 480.0
margin_bottom = 180.0
text = "btn_support"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedbackButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 240.0
margin_right = 480.0
margin_bottom = 276.0
mouse_default_cursor_shape = 2
text = "btn_feedback"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = 368.0
margin_right = 384.0
margin_bottom = 416.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton2" type="TextureButton" parent="."]
margin_left = 416.0
margin_top = 368.0
margin_right = 480.0
margin_bottom = 416.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 78.0
text = "btn_setting"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 320.0
margin_top = 336.0
margin_right = 480.0
margin_bottom = 350.0
text = "btn_language"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="FeedbackButton" to="." method="_on_FeedbackButton_pressed"]
[connection signal="pressed" from="LanguageButton" to="." method="_on_LanguageButton_pressed"]
[connection signal="pressed" from="LanguageButton2" to="." method="_on_LanguageButton2_pressed"]
